minio-test/deploy/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: minio-test-route
  namespace: minio-test
spec:
  host: minio-test-minio-test.apps.ocp43-dev.cloudlet-dev.com
  to:
    kind: Service
    name: minio-test
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
status:
  ingress:
    - wildcardPolicy: None
      host: minio-test-minio-test.apps.apps.ocp43-dev.cloudlet-dev.com
      routerCanonicalHostname: apps.ocp43-dev.cloudlet-dev.com
      routerName: default
